--- a/manual/credenciamento.html
+++ b/manual/credenciamento.html
@@ -160,27 +160,27 @@
 
 <h2 id="diagrama-de-utilização-demostrando-os-passos-para-o-uso-da-api">Diagrama de utilização demostrando os passos para o uso da API</h2>
 
-<h2 id="documentação-técnica">Documentação Técnica</h2>
+<p><img src="https://developercielo.github.io/images/credenciamento/credenciamentobr.png" alt="Credenciamento" /></p>
 
-<h2 id="api-docs">API Docs</h2>
+<h1 id="api-docs">API Docs</h1>
 
-<h3 id="endpoints-sandbox-e-produção">Endpoints (Sandbox e Produção)</h3>
+<h2 id="endpoints-sandbox-e-produção">Endpoints (Sandbox e Produção)</h2>
 
 <p>Ambiente Produção</p>
 
 <ul>
-  <li><a href="https://apicielocombr/affiliate">https://apicielocombr/affiliate</a></li>
+  <li>(https://api.cielo.com.br/affiliate)</li>
 </ul>
 
 <p>Ambiente Sandbox</p>
 
 <ul>
-  <li><a href="https://apicielocombr/sandbox/affiliate">https://apicielocombr/sandbox/affiliate</a></li>
+  <li>(https://api.cielo.com.br/sandbox/affiliate)</li>
 </ul>
 
-<h3 id="instruções-para-uso-realizar-chamadas-autenticação">Instruções para uso: realizar chamadas, autenticação</h3>
+<h2 id="instruções-para-uso-realizar-chamadas-autenticação">Instruções para uso: realizar chamadas, autenticação</h2>
 
-<h3 id="http-header">HTTP Header</h3>
+<h2 id="http-header">HTTP Header</h2>
 
 <p>Todas as chamadas da API de Credenciamento necessitam que as informações abaixo estejam presentes no Header na requisição:</p>
 
@@ -188,9 +188,7 @@
 
 <p><strong>Access-Token</strong>:Identificação do token de acesso, que armazena as regras de acesso permitidas ao Client ID Sua geração ocorre no momento da criação do Client ID pelo painel do desenvolvedor Seu valor pode ser visualizado clicando em “detalhes” na coluna “Access Tokens”, dentro do menu “Desenvolvedor” -&gt; “Client ID Cadastrados”</p>
 
-<p><strong>Merchant-Id</strong>: Token que identifica o estabelecimento comercial dentro do servidor Order Manager da Cielo LIO Sua geração ocorre durante o processo de cadastro do Client ID Seu valor pode ser visualizado na coluna “Merchant ID”, dentro do menu “Desenvolvedor” -&gt; “Client ID Cadastrados”</p>
-
-<h3 id="http-status-code">HTTP Status Code</h3>
+<h2 id="http-status-code">HTTP Status Code</h2>
 
 <table>
   <thead>
@@ -259,9 +257,9 @@
   </tbody>
 </table>
 
-<h3 id="recursos">Recursos</h3>
+<h2 id="recursos">Recursos</h2>
 
-<h4 id="merchants">Merchants</h4>
+<h3 id="criação-de-proposta-comercial-para-credenciamento">Criação de proposta comercial para credenciamento</h3>
 
 <p>Merchants é a representação da entidade de estabelecimento comercial para a execução do fluxo de credenciamento de um novo cliente</p>
 
@@ -390,7 +388,7 @@
 </span><span class="p">}</span><span class="w">
 </span></code></pre></div></div>
 
-<h4 id="request">Request</h4>
+<h3 id="request">Request</h3>
 
 <table>
   <thead>
@@ -687,7 +685,7 @@
   </tbody>
 </table>
 
-<h4 id="response">Response</h4>
+<h3 id="response">Response</h3>
 
 <table>
   <thead>
@@ -714,7 +712,7 @@
   </tbody>
 </table>
 
-<h4 id="terminals">Terminals</h4>
+<h3 id="consulta-terminal-lógico-equipamento">Consulta terminal lógico (equipamento)</h3>
 
 <p>Terminal referencia a solução captura que retorna a identificação do terminal lógico quando associado a um estabelecimento comercial</p>
 
@@ -727,7 +725,7 @@
   <span class="nt">-H</span> <span class="s1">'content-type: application/json'</span>
 </code></pre></div></div>
 
-<h5 id="requisição">Requisição</h5>
+<h4 id="requisição">Requisição</h4>
 
 <table>
   <thead>
@@ -748,7 +746,7 @@
   </tbody>
 </table>
 
-<h5 id="resposta">Resposta</h5>
+<h4 id="resposta">Resposta</h4>
 
 <table>
   <thead>
