[9f9f20c1bb78b3c57d7d5326d8527f4b4e31ae28]: Update 2000-01-01-credenciamento.md

--- a/manual/credenciamento.html
+++ b/manual/credenciamento.html
@@ -162,8 +162,6 @@
 
 <p><img src="https://developercielo.github.io/images/credenciamento/credenciamentobr.png" alt="Credenciamento" /></p>
 
-<h1 id="api-docs">API Docs</h1>
-
 <h2 id="endpoints-sandbox-e-produção">Endpoints (Sandbox e Produção)</h2>
 
 <p>Ambiente Produção</p>
@@ -252,14 +250,14 @@
     <tr>
       <td>500</td>
       <td>Internal Server Error</td>
-      <td>Erro não esperado; algo está quebrado na API</td>
+      <td>Erro não esperado; algoestá quebrado na API</td>
     </tr>
   </tbody>
 </table>
 
-<h2 id="recursos">Recursos</h2>
+<h1 id="api-docs">API Docs</h1>
 
-<h3 id="criação-de-proposta-comercial-para-credenciamento">Criação de proposta comercial para credenciamento</h3>
+<h2 id="criação-de-proposta-comercial-para-credenciamento">Criação de proposta comercial para credenciamento</h2>
 
 <p>Merchants é a representação da entidade de estabelecimento comercial para a execução do fluxo de credenciamento de um novo cliente</p>
 
@@ -388,7 +386,7 @@
 </span><span class="p">}</span><span class="w">
 </span></code></pre></div></div>
 
-<h3 id="request">Request</h3>
+<p><strong><em>Request</em></strong></p>
 
 <table>
   <thead>
@@ -685,7 +683,7 @@
   </tbody>
 </table>
 
-<h3 id="response">Response</h3>
+<p><strong><em>Response</em></strong></p>
 
 <table>
   <thead>
@@ -712,7 +710,7 @@
   </tbody>
 </table>
 
-<h3 id="consulta-terminal-lógico-equipamento">Consulta terminal lógico (equipamento)</h3>
+<h2 id="consulta-terminal-lógico-equipamento">Consulta terminal lógico (equipamento)</h2>
 
 <p>Terminal referencia a solução captura que retorna a identificação do terminal lógico quando associado a um estabelecimento comercial</p>
 
@@ -725,7 +723,7 @@
   <span class="nt">-H</span> <span class="s1">'content-type: application/json'</span>
 </code></pre></div></div>
 
-<h4 id="requisição">Requisição</h4>
+<p><strong><em>Requisição</em></strong></p>
 
 <table>
   <thead>
@@ -746,7 +744,7 @@
   </tbody>
 </table>
 
-<h4 id="resposta">Resposta</h4>
+<p><strong><em>Resposta</em></strong></p>
 
 <table>
   <thead>
