[93994bf65dbdd3141b6c24cceea4786f7d7e2208]: Updated '_i18n/pt/_posts/braspag/2017-07-26-braspag-cartao-protegido.md' via CloudCannon

--- a/manual/braspag-cartao-protegido.html
+++ b/manual/braspag-cartao-protegido.html
@@ -182,7 +182,7 @@ O gateway PAGADOR (BRASPAG) está integrado ao <strong>CARTÃO PROTEGIDO</strong
   <li><strong>Data de Validade</strong></li>
 </ul>
 
-<aside class="warning"><b>CÓDIGO DE SEGURANÇA (CVV)</b>O código de segurança não é armazenado devido a regras de seguranças PCI - Vide seção "Código de Segurança"</aside>
+<aside class="warning"><b>CÓDIGO DE SEGURANÇA (CVV)</b> O código de segurança não é armazenado devido a regras de seguranças PCI - Vide seção "Código de Segurança"</aside>
 
 <aside class="warning">Para garantir uma maior segurança, apenas os IP’s previamente cadastrados do Estabelecimento poderão consultar um número de cartão ou autorizar uma transação utilizando a chave do Cartão Protegido (JustClickKey).</aside>
 
@@ -208,7 +208,7 @@ O gateway PAGADOR (BRASPAG) está integrado ao <strong>CARTÃO PROTEGIDO</strong
   <li>Receber o resultado da autorização</li>
 </ol>
 
-<p><img src="https://developercielo.github.io/images/braspag/autorizacaocomopcaosalvarcartao.PNG" alt="" /></p>
+<p><img src="https://developercielo.github.io/images/braspag/autorizacaocomopcaosalvarcartao.png" alt="" /></p>
 
 <h1 id="fluxo-de-autorizaÇÃo-via-pagador">FLUXO DE AUTORIZAÇÃO VIA PAGADOR</h1>
 
