[a72db30d04dc26f9e6502f1db1cd6ae96424967f]: Update 2000-01-01-credenciamento.md

--- a/manual/credenciamento.html
+++ b/manual/credenciamento.html
@@ -723,7 +723,7 @@
   <span class="nt">-H</span> <span class="s1">'content-type: application/json'</span>
 </code></pre></div></div>
 
-<p><strong><em>Requisição</em></strong></p>
+<p><strong><em>Request</em></strong></p>
 
 <table>
   <thead>
@@ -744,7 +744,7 @@
   </tbody>
 </table>
 
-<p><strong><em>Resposta</em></strong></p>
+<p><strong><em>Response</em></strong></p>
 
 <table>
   <thead>
