[e12de8110a8536ab48541efcbce2d781837ac015]: Updated '_i18n/pt/_posts/braspag/2017-07-26-braspag-cartao-protegido.md' via CloudCannon

--- a/manual/braspag-cartao-protegido.html
+++ b/manual/braspag-cartao-protegido.html
@@ -247,7 +247,7 @@ O gateway PAGADOR (BRASPAG) está integrado ao <strong>CARTÃO PROTEGIDO</strong
 
 <h2 id="autorizaÇÃo-com-opÇÃo-salvar-cartÃo">AUTORIZAÇÃO COM OPÇÃO SALVAR CARTÃO</h2>
 
-<p>IMAGEM”/images/pgautorizacaocomopcaosalvarcartao.PNG”&gt;</p>
+<p><img src="https://developercielo.github.io/images/braspag/pgautorizacaocomopcaosalvarcartao.png" alt="" /></p>
 
 <ol>
   <li>Enviar a tentativa de autorização da compra em questão via PAGADOR, contendo o parâmetro SaveCreditCard;</li>
@@ -258,7 +258,7 @@ O gateway PAGADOR (BRASPAG) está integrado ao <strong>CARTÃO PROTEGIDO</strong
 
 <h2 id="autorizaÇÃo-com-cartÃo-jÁ-salvo">AUTORIZAÇÃO COM CARTÃO JÁ SALVO</h2>
 
-<p>IMAGEM”/images/pgautorizacaocomcartaosalvo.PNG”&gt;</p>
+<p><img src="https://developercielo.github.io/images/braspag/pgautorizacaocomcartaosalvo.png" alt="" /></p>
 
 <ol>
   <li>Enviar a tentativa de autorização da compra em questão via PAGADOR, contendo o parâmetro CredicardToken;</li>
