[2a695855b71451e81b53eb896d2c45e973e37666]: Updated '_i18n/pt/_posts/braspag/2017-07-26-braspag-cartao-protegido.md' via CloudCannon

--- a/manual/braspag-cartao-protegido.html
+++ b/manual/braspag-cartao-protegido.html
@@ -185,11 +185,13 @@ O gateway PAGADOR (BRASPAG) está integrado ao <strong>CARTÃO PROTEGIDO</strong
 <p>Nas seções abaixo, estão graficamente representados, os fluxos do processo de venda. Existem 2 maneiras de integrar o produto:</p>
 
 <table>
-  <tbody>
+  <thead>
     <tr>
-      <td>Tipo de integração</td>
-      <td>Via de integração</td>
+      <th>Tipo de integração</th>
+      <th>Via de integração</th>
     </tr>
+  </thead>
+  <tbody>
     <tr>
       <td><strong>Cartão protegido</strong></td>
       <td>Utilizando a API do proprio Cartão Protegido</td>
